Fixes padding bug on small viewports

--- a/scss/_breadcrumb.scss
+++ b/scss/_breadcrumb.scss
@@ -1,8 +1,11 @@
 .breadcrumb-wrapper {
-  padding: .75rem 0;
+  padding: .75rem 1rem;
   display: block;
   background-color: var(--theme-breadcrumb-bg-color);
   border-bottom: 1px solid var(--theme-breadcrumb-border-color);
+  @media screen and (min-width: 1024px){
+    padding: .75rem 0;
+  }
 }
 .breadcrumb {
   margin-bottom: 0;
